--- a/cfg/nginx/default.conf
+++ b/cfg/nginx/default.conf
@@ -3,7 +3,7 @@ server {
 
   default_type text/html;
 
-  root /app/public;
+  root /var/www/public;
 
   add_header X-Frame-Options "SAMEORIGIN";
   add_header X-Content-Type-Options "nosniff";
