feat: added migrations and empty models

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       POSTGRES_DB: ${DB_DATABASE}
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
+      DB_CONNECTION: ${DB_CONNECTION}
     volumes:
       - ./storage/_db:/var/lib/postgresql
 
